adlatus-ci-cd/cd/deploy/base/modules/adlatus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adlatus-deployment
  namespace: adl
  labels:
    app: adlatus
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: adlatus
  template:
    metadata:
      labels:
        app: adlatus
    spec:
      containers:
        - name: adlatus
          image: adlatus:latest
          ports:
            - containerPort: 8080
          # envFrom:
          #  - configMapRef:
          #      name: adlatus-config
          #  - secretRef:
          #      name: adlatus-secret
