adlatus-ci-cd/cd/deploy/base/modules/adlatus/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: adlatus-service
  namespace: adl
spec:
  selector:
    app: adlatus
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
